[gd_scene load_steps=19 format=4 uid="uid://dgoki8v3186fo"]

[ext_resource type="Script" uid="uid://4posqybdysmv" path="res://game.gd" id="1_3mrqo"]
[ext_resource type="TileSet" uid="uid://nfmr2vv1srsv" path="res://tile_set.tres" id="1_r0x5m"]
[ext_resource type="AudioStream" uid="uid://cmadvb3k41e7m" path="res://assets/sound/Three Red Hearts - Save the City.ogg" id="2_gwjdr"]
[ext_resource type="Script" uid="uid://brycqpl75o00g" path="res://ui/turn_indicator.gd" id="3_joorw"]
[ext_resource type="SpriteFrames" uid="uid://co0k8qfl108uy" path="res://ui/arrow_frames.tres" id="4_2vekm"]
[ext_resource type="FontFile" uid="uid://dtnpuo2nvo7og" path="res://assets/font_LibreQuake.webp" id="5_gwjdr"]
[ext_resource type="Theme" uid="uid://cjw4275b71cs8" path="res://ui/theme.tres" id="5_yhmtn"]
[ext_resource type="Script" uid="uid://c01k1qth7mdh7" path="res://ui/ready_button.gd" id="5_yx171"]
[ext_resource type="Script" uid="uid://dk580lsxuw7f4" path="res://unit_selector.gd" id="6_yx171"]
[ext_resource type="AudioStream" uid="uid://d162lqe715aeh" path="res://assets/sound/select_1.wav" id="10_lvtmh"]
[ext_resource type="PackedScene" uid="uid://bv2xmnffhdjp6" path="res://units/Unit.tscn" id="10_yhmtn"]
[ext_resource type="PackedScene" uid="uid://byf4k4njcoxwi" path="res://ui/MainMenu.tscn" id="11_yhmtn"]
[ext_resource type="Script" uid="uid://b2cwd61irew2w" path="res://placement_grid.gd" id="12_gwjdr"]

[sub_resource type="LabelSettings" id="LabelSettings_7jktm"]
font = ExtResource("5_gwjdr")
font_size = 48

[sub_resource type="InputEventAction" id="InputEventAction_7jktm"]
action = &"next_turn"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_ryrav"]
events = [SubResource("InputEventAction_7jktm")]

[sub_resource type="InputEventAction" id="InputEventAction_r0x5m"]
action = &"toggle_fast"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_r0x5m"]
events = [SubResource("InputEventAction_r0x5m")]

[node name="Game" type="Node2D"]
script = ExtResource("1_3mrqo")
metadata/_edit_vertical_guides_ = [351.0]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_gwjdr")
volume_db = -30.0
autoplay = true
parameters/looping = true

[node name="background" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAAAAAAkAAQABAAEAAAAAAAoAAQABAAEAAAAAAAsAAQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAAAABEAAQABAAEAAAAAABIAAQABAAEAAAAAABMAAQABAAEAAAAAABQAAQABAAEAAAAAABUAAQABAAEAAAAAABYAAQABAAEAAAAAABcAAQABAAEAAAAAABgAAQABAAEAAAAAABkAAQABAAEAAAABAAAAAQABAAEAAAABAAEAAQAFAAQAAAABAAIAAQABAAEAAAABAAMAAQABAAEAAAABAAQAAQABAAEAAAABAAUAAQABAAEAAAABAAYAAQABAAEAAAABAAcAAQAEAAUAAAABAAgAAQABAAEAAAABAAkAAQABAAEAAAABAAoAAQABAAEAAAABAAsAAQAFAAQAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAABABEAAQABAAEAAAABABIAAQABAAEAAAABABMAAQABAAEAAAABABQAAQABAAEAAAABABUAAQABAAEAAAABABYAAQABAAEAAAABABcAAQABAAEAAAABABgAAQABAAEAAAABABkAAQABAAEAAAACAAAAAQABAAEAAAACAAEAAQABAAEAAAACAAIAAQABAAEAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAUAAQABAAEAAAACAAYAAQABAAEAAAACAAcAAQABAAEAAAACAAgAAQABAAEAAAACAAkAAQABAAEAAAACAAoAAQABAAEAAAACAAsAAQABAAEAAAACAAwAAQABAAEAAAACAA0AAQABAAEAAAACAA4AAQABAAEAAAACAA8AAQABAAEAAAACABAAAQABAAEAAAACABEAAQABAAEAAAACABIAAQABAAEAAAACABMAAQABAAEAAAACABQAAQABAAEAAAACABUAAQABAAEAAAACABYAAQABAAEAAAACABgAAQABAAEAAAACABkAAQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAADAAMAAQABAAEAAAADAAQAAQABAAEAAAADAAUAAQAFAAQAAAADAAYAAQABAAEAAAADAAcAAQABAAEAAAADAAgAAQABAAEAAAADAAkAAQABAAEAAAADAAoAAQABAAEAAAADAAsAAQABAAEAAAADAAwAAQABAAEAAAADAA0AAQABAAEAAAADAA4AAQABAAEAAAADAA8AAQABAAEAAAADABAAAQABAAEAAAADABEAAQABAAEAAAADABIAAQABAAEAAAADABMAAQABAAEAAAADABQAAQABAAEAAAADABUAAQABAAEAAAADABYAAQABAAEAAAADABcAAQABAAEAAAADABgAAQABAAEAAAADABkAAQABAAEAAAAEAAAAAQABAAEAAAAEAAEAAQABAAEAAAAEAAIAAQABAAEAAAAEAAMAAQABAAEAAAAEAAQAAQABAAEAAAAEAAUAAQABAAEAAAAEAAYAAQABAAEAAAAEAAcAAQABAAEAAAAEAAgAAQABAAEAAAAEAAkAAQABAAEAAAAEAAoAAQABAAEAAAAEAAsAAQABAAEAAAAEAAwAAQABAAEAAAAEAA0AAQABAAEAAAAEAA4AAQABAAEAAAAEAA8AAQABAAEAAAAEABAAAQABAAEAAAAEABEAAQABAAEAAAAEABIAAQABAAEAAAAEABMAAQABAAEAAAAEABQAAQABAAEAAAAEABUAAQABAAEAAAAEABYAAQABAAEAAAAEABcAAQABAAEAAAAEABgAAQABAAEAAAAEABkAAQABAAEAAAAFAAAAAQABAAEAAAAFAAEAAQABAAEAAAAFAAIAAQAEAAUAAAAFAAMAAQABAAEAAAAFAAQAAQABAAEAAAAFAAUAAQABAAEAAAAFAAYAAQABAAEAAAAFAAcAAQABAAEAAAAFAAgAAQABAAEAAAAFAAkAAQABAAEAAAAFAAoAAQABAAEAAAAFAAsAAQABAAEAAAAFAAwAAQABAAEAAAAFAA0AAQABAAEAAAAFAA4AAQABAAEAAAAFAA8AAQABAAEAAAAFABAAAQABAAEAAAAFABEAAQABAAEAAAAFABIAAQABAAEAAAAFABMAAQABAAEAAAAFABQAAQABAAEAAAAFABUAAQABAAEAAAAFABYAAQABAAEAAAAFABcAAQABAAEAAAAFABgAAQABAAEAAAAFABkAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAGAAIAAQABAAEAAAAGAAMAAQABAAEAAAAGAAQAAQABAAEAAAAGAAUAAQABAAEAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAGAAgAAQABAAEAAAAGAAkAAQABAAEAAAAGAAoAAQABAAEAAAAGAAsAAQABAAEAAAAGAAwAAQABAAEAAAAGAA0AAQABAAEAAAAGAA4AAQABAAEAAAAGAA8AAQABAAEAAAAGABAAAQABAAEAAAAGABEAAQABAAEAAAAGABIAAQABAAEAAAAGABMAAQABAAEAAAAGABQAAQABAAEAAAAGABUAAQABAAEAAAAGABYAAQABAAEAAAAGABcAAQABAAEAAAAGABgAAQABAAEAAAAGABkAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQABAAEAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAHAAQAAQABAAEAAAAHAAUAAQAGAAUAAAAHAAYAAQABAAEAAAAHAAcAAQABAAEAAAAHAAgAAQAFAAQAAAAHAAkAAQABAAEAAAAHAAoAAQABAAEAAAAHAAsAAQABAAEAAAAHAAwAAQABAAEAAAAHAA0AAQABAAEAAAAHAA4AAQABAAEAAAAHAA8AAQABAAEAAAAHABAAAQABAAEAAAAHABEAAQABAAEAAAAHABIAAQABAAEAAAAHABMAAQABAAEAAAAHABQAAQABAAEAAAAHABUAAQABAAEAAAAHABYAAQABAAEAAAAHABcAAQABAAEAAAAHABgAAQABAAEAAAAHABkAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAIAAQAAQABAAEAAAAIAAUAAQABAAEAAAAIAAYAAQABAAEAAAAIAAcAAQABAAEAAAAIAAgAAQABAAEAAAAIAAkAAQABAAEAAAAIAAoAAQABAAEAAAAIAAsAAQABAAEAAAAIAAwAAQABAAEAAAAIAA0AAQABAAEAAAAIAA4AAQABAAEAAAAIAA8AAQABAAEAAAAIABAAAQABAAEAAAAIABEAAQABAAEAAAAIABIAAQABAAEAAAAIABMAAQABAAEAAAAIABQAAQABAAEAAAAIABUAAQABAAEAAAAIABYAAQABAAEAAAAIABcAAQABAAEAAAAIABgAAQABAAEAAAAIABkAAQABAAEAAAAJAAAAAQABAAEAAAAJAAEAAQABAAEAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAJAAQAAQABAAEAAAAJAAUAAQABAAEAAAAJAAYAAQABAAEAAAAJAAcAAQABAAEAAAAJAAgAAQABAAEAAAAJAAkAAQABAAEAAAAJAAoAAQABAAEAAAAJAAsAAQABAAEAAAAJAAwAAQABAAEAAAAJAA0AAQABAAEAAAAJAA4AAQABAAEAAAAJAA8AAQABAAEAAAAJABAAAQABAAEAAAAJABEAAQABAAEAAAAJABIAAQABAAEAAAAJABMAAQABAAEAAAAJABQAAQABAAEAAAAJABUAAQABAAEAAAAJABYAAQABAAEAAAAJABcAAQABAAEAAAAJABgAAQABAAEAAAAJABkAAQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAAKAAIAAQABAAEAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAAKAAYAAQABAAEAAAAKAAcAAQABAAEAAAAKAAgAAQABAAEAAAAKAAkAAQABAAEAAAAKAAoAAQABAAEAAAAKAAsAAQABAAEAAAAKAAwAAQABAAEAAAAKAA0AAQABAAEAAAAKAA4AAQABAAEAAAAKAA8AAQABAAEAAAAKABAAAQABAAEAAAAKABEAAQABAAEAAAAKABIAAQABAAEAAAAKABMAAQABAAEAAAAKABQAAQABAAEAAAAKABUAAQABAAEAAAAKABYAAQABAAEAAAAKABcAAQABAAEAAAAKABgAAQABAAEAAAAKABkAAQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAALAAMAAQABAAEAAAALAAQAAQABAAEAAAALAAUAAQABAAEAAAALAAYAAQABAAEAAAALAAcAAQABAAEAAAALAAgAAQABAAEAAAALAAkAAQABAAEAAAALAAoAAQABAAEAAAALAAsAAQABAAEAAAALAAwAAQABAAEAAAALAA0AAQABAAEAAAALAA4AAQABAAEAAAALAA8AAQABAAEAAAALABAAAQABAAEAAAALABEAAQABAAEAAAALABIAAQABAAEAAAALABMAAQABAAEAAAALABQAAQABAAEAAAALABUAAQABAAEAAAALABYAAQABAAEAAAALABcAAQABAAEAAAALABgAAQABAAEAAAALABkAAQABAAEAAAAMAAAAAQABAAEAAAAMAAEAAQABAAEAAAAMAAIAAQABAAEAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQABAAEAAAAMAAYAAQABAAEAAAAMAAcAAQABAAEAAAAMAAgAAQABAAEAAAAMAAkAAQABAAEAAAAMAAoAAQABAAEAAAAMAAsAAQABAAEAAAAMAAwAAQABAAEAAAAMAA0AAQABAAEAAAAMAA4AAQABAAEAAAAMAA8AAQABAAEAAAAMABAAAQABAAEAAAAMABEAAQABAAEAAAAMABIAAQABAAEAAAAMABMAAQABAAEAAAAMABQAAQABAAEAAAAMABUAAQABAAEAAAAMABYAAQABAAEAAAAMABcAAQABAAEAAAAMABgAAQABAAEAAAAMABkAAQABAAEAAAANAAAAAQABAAEAAAANAAEAAQABAAEAAAANAAIAAQABAAEAAAANAAMAAQABAAEAAAANAAQAAQABAAEAAAANAAUAAQABAAEAAAANAAYAAQABAAEAAAANAAcAAQABAAEAAAANAAgAAQABAAEAAAANAAkAAQABAAEAAAANAAoAAQABAAEAAAANAAsAAQABAAEAAAANAAwAAQABAAEAAAANAA0AAQABAAEAAAANAA4AAQABAAEAAAANAA8AAQABAAEAAAANABAAAQABAAEAAAANABEAAQABAAEAAAANABIAAQABAAEAAAANABMAAQABAAEAAAANABQAAQABAAEAAAANABUAAQABAAEAAAANABYAAQABAAEAAAANABcAAQABAAEAAAANABgAAQABAAEAAAANABkAAQABAAEAAAAOAAAAAQABAAEAAAAOAAEAAQABAAEAAAAOAAIAAQABAAEAAAAOAAMAAQABAAEAAAAOAAQAAQABAAEAAAAOAAUAAQABAAEAAAAOAAYAAQABAAEAAAAOAAcAAQABAAEAAAAOAAgAAQABAAEAAAAOAAkAAQABAAEAAAAOAAoAAQABAAEAAAAOAAsAAQABAAEAAAAOAAwAAQABAAEAAAAOAA0AAQABAAEAAAAOAA4AAQABAAEAAAAOAA8AAQABAAEAAAAOABAAAQABAAEAAAAOABEAAQABAAEAAAAOABIAAQABAAEAAAAOABMAAQABAAEAAAAOABQAAQABAAEAAAAOABUAAQABAAEAAAAOABYAAQABAAEAAAAOABcAAQABAAEAAAAOABgAAQABAAEAAAAOABkAAQABAAEAAAAPAAAAAQABAAEAAAAPAAEAAQABAAEAAAAPAAIAAQABAAEAAAAPAAMAAQABAAEAAAAPAAQAAQABAAEAAAAPAAUAAQABAAEAAAAPAAYAAQABAAEAAAAPAAcAAQABAAEAAAAPAAgAAQABAAEAAAAPAAkAAQABAAEAAAAPAAoAAQABAAEAAAAPAAsAAQABAAEAAAAPAAwAAQABAAEAAAAPAA0AAQABAAEAAAAPAA4AAQABAAEAAAAPAA8AAQABAAEAAAAPABAAAQABAAEAAAAPABEAAQABAAEAAAAPABIAAQABAAEAAAAPABMAAQABAAEAAAAPABQAAQABAAEAAAAPABUAAQABAAEAAAAPABYAAQABAAEAAAAPABcAAQABAAEAAAAPABgAAQABAAEAAAAPABkAAQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAAQAAIAAQABAAEAAAAQAAMAAQABAAEAAAAQAAQAAQABAAEAAAAQAAUAAQABAAEAAAAQAAYAAQABAAEAAAAQAAcAAQABAAEAAAAQAAgAAQABAAEAAAAQAAkAAQABAAEAAAAQAAoAAQABAAEAAAAQAAsAAQABAAEAAAAQAAwAAQABAAEAAAAQAA0AAQABAAEAAAAQAA4AAQABAAEAAAAQAA8AAQABAAEAAAAQABAAAQABAAEAAAAQABEAAQABAAEAAAAQABIAAQABAAEAAAAQABMAAQABAAEAAAAQABQAAQABAAEAAAAQABUAAQABAAEAAAAQABYAAQABAAEAAAAQABcAAQABAAEAAAAQABgAAQABAAEAAAAQABkAAQABAAEAAAARAAAAAQABAAEAAAARAAEAAQABAAEAAAARAAIAAQABAAEAAAARAAMAAQABAAEAAAARAAQAAQABAAEAAAARAAUAAQABAAEAAAARAAYAAQABAAEAAAARAAcAAQABAAEAAAARAAgAAQABAAEAAAARAAkAAQABAAEAAAARAAoAAQABAAEAAAARAAsAAQABAAEAAAARAAwAAQABAAEAAAARAA0AAQABAAEAAAARAA4AAQABAAEAAAARAA8AAQABAAEAAAARABAAAQABAAEAAAARABEAAQABAAEAAAARABIAAQABAAEAAAARABMAAQABAAEAAAARABQAAQABAAEAAAARABUAAQABAAEAAAARABYAAQABAAEAAAARABcAAQABAAEAAAARABgAAQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAASAAIAAQABAAEAAAASAAMAAQABAAEAAAASAAQAAQAFAAQAAAASAAUAAQABAAEAAAASAAYAAQABAAEAAAASAAcAAQABAAEAAAASAAgAAQABAAEAAAASAAkAAQABAAEAAAASAAoAAQABAAEAAAASAAsAAQABAAEAAAASAAwAAQABAAEAAAASAA0AAQABAAEAAAASAA4AAQABAAEAAAASAA8AAQABAAEAAAASABAAAQABAAEAAAASABEAAQABAAEAAAASABIAAQABAAEAAAASABMAAQABAAEAAAASABQAAQABAAEAAAASABUAAQABAAEAAAASABYAAQABAAEAAAASABcAAQABAAEAAAASABgAAQABAAEAAAASABkAAQABAAEAAAATAAAAAQABAAEAAAATAAEAAQABAAEAAAATAAIAAQABAAEAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAATAAUAAQABAAEAAAATAAYAAQABAAEAAAATAAcAAQABAAEAAAATAAgAAQABAAEAAAATAAkAAQABAAEAAAATAAoAAQABAAEAAAATAAsAAQABAAEAAAATAAwAAQABAAEAAAATAA0AAQABAAEAAAATAA4AAQABAAEAAAATAA8AAQABAAEAAAATABAAAQABAAEAAAATABEAAQABAAEAAAATABIAAQABAAEAAAATABMAAQABAAEAAAATABQAAQABAAEAAAATABUAAQABAAEAAAATABYAAQABAAEAAAATABcAAQABAAEAAAATABgAAQABAAEAAAATABkAAQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAQAEAAUAAAAUAAIAAQABAAEAAAAUAAMAAQABAAEAAAAUAAQAAQABAAEAAAAUAAUAAQABAAEAAAAUAAYAAQABAAEAAAAUAAcAAQAEAAUAAAAUAAgAAQABAAEAAAAUAAkAAQABAAEAAAAUAAoAAQABAAEAAAAUAAsAAQABAAEAAAAUAAwAAQABAAEAAAAUAA0AAQABAAEAAAAUAA4AAQABAAEAAAAUAA8AAQABAAEAAAAUABAAAQABAAEAAAAUABEAAQABAAEAAAAUABIAAQABAAEAAAAUABMAAQABAAEAAAAUABQAAQABAAEAAAAUABUAAQABAAEAAAAUABYAAQABAAEAAAAUABcAAQABAAEAAAAUABgAAQABAAEAAAAUABkAAQABAAEAAAAVAAAAAQABAAEAAAAVAAEAAQABAAEAAAAVAAIAAQABAAEAAAAVAAMAAQABAAEAAAAVAAQAAQABAAEAAAAVAAUAAQABAAEAAAAVAAYAAQABAAEAAAAVAAcAAQABAAEAAAAVAAgAAQABAAEAAAAVAAkAAQABAAEAAAAVAAoAAQABAAEAAAAVAAsAAQABAAEAAAAVAAwAAQAFAAQAAAAVAA0AAQABAAEAAAAVAA4AAQABAAEAAAAVAA8AAQABAAEAAAAVABAAAQABAAEAAAAVABEAAQABAAEAAAAVABIAAQABAAEAAAAVABMAAQABAAEAAAAVABQAAQABAAEAAAAVABUAAQABAAEAAAAVABYAAQABAAEAAAAVABcAAQABAAEAAAAVABgAAQABAAEAAAAVABkAAQABAAEAAAAWAAAAAQABAAEAAAAWAAEAAQABAAEAAAAWAAIAAQABAAEAAAAWAAMAAQABAAEAAAAWAAQAAQABAAEAAAAWAAUAAQABAAEAAAAWAAYAAQABAAEAAAAWAAcAAQABAAEAAAAWAAgAAQABAAEAAAAWAAkAAQABAAEAAAAWAAoAAQABAAEAAAAWAAsAAQABAAEAAAAWAAwAAQABAAEAAAAWAA0AAQABAAEAAAAWAA4AAQABAAEAAAAWAA8AAQABAAEAAAAWABAAAQABAAEAAAAWABEAAQABAAEAAAAWABIAAQABAAEAAAAWABMAAQABAAEAAAAWABQAAQABAAEAAAAWABUAAQABAAEAAAAWABYAAQABAAEAAAAWABcAAQABAAEAAAAWABgAAQABAAEAAAAWABkAAQAFAAQAAAAXAAAAAQABAAEAAAAXAAEAAQABAAEAAAAXAAIAAQABAAEAAAAXAAMAAQABAAEAAAAXAAQAAQAGAAUAAAAXAAUAAQABAAEAAAAXAAYAAQABAAEAAAAXAAcAAQABAAEAAAAXAAgAAQABAAEAAAAXAAkAAQAFAAUAAAAXAAoAAQABAAEAAAAXAAsAAQABAAEAAAAXAAwAAQABAAEAAAAXAA0AAQABAAEAAAAXAA4AAQABAAEAAAAXAA8AAQABAAEAAAAXABAAAQABAAEAAAAXABEAAQABAAEAAAAXABIAAQABAAEAAAAXABMAAQABAAEAAAAXABQAAQABAAEAAAAXABUAAQABAAEAAAAXABYAAQABAAEAAAAXABcAAQABAAEAAAAXABgAAQABAAEAAAAXABkAAQABAAEAAAAYAAAAAQABAAEAAAAYAAEAAQABAAEAAAAYAAIAAQABAAEAAAAYAAMAAQABAAEAAAAYAAQAAQABAAEAAAAYAAUAAQABAAEAAAAYAAYAAQAFAAQAAAAYAAcAAQABAAEAAAAYAAgAAQABAAEAAAAYAAkAAQABAAEAAAAYAAoAAQABAAEAAAAYAAsAAQABAAEAAAAYAAwAAQABAAEAAAAYAA0AAQABAAEAAAAYAA4AAQABAAEAAAAYAA8AAQABAAEAAAAYABAAAQABAAEAAAAYABEAAQABAAEAAAAYABIAAQABAAEAAAAYABMAAQABAAEAAAAYABQAAQABAAEAAAAYABUAAQABAAEAAAAYABYAAQABAAEAAAAYABcAAQABAAEAAAAYABgAAQABAAEAAAAYABkAAQABAAEAAAAZAAAAAQABAAEAAAAZAAEAAQABAAEAAAAZAAIAAQABAAEAAAAZAAMAAQABAAEAAAAZAAQAAQABAAEAAAAZAAUAAQABAAEAAAAZAAYAAQABAAEAAAAZAAcAAQABAAEAAAAZAAgAAQABAAEAAAAZAAkAAQABAAEAAAAZAAoAAQABAAEAAAAZAAsAAQABAAEAAAAZAAwAAQABAAEAAAAZAA0AAQABAAEAAAAZAA4AAQABAAEAAAAZAA8AAQABAAEAAAAZABAAAQABAAEAAAAZABEAAQABAAEAAAAZABIAAQABAAEAAAAZABMAAQABAAEAAAAZABQAAQABAAEAAAAZABUAAQABAAEAAAAZABYAAQABAAEAAAAZABcAAQABAAEAAAAZABgAAQABAAEAAAAZABkAAQABAAEAAAAaAAAAAQABAAEAAAAaAAEAAQABAAEAAAAaAAIAAQABAAEAAAAaAAMAAQABAAEAAAAaAAQAAQABAAEAAAAaAAUAAQABAAEAAAAaAAYAAQABAAEAAAAaAAcAAQABAAEAAAAaAAgAAQABAAEAAAAaAAkAAQABAAEAAAAaAAoAAQABAAEAAAAaAAsAAQABAAEAAAAaAAwAAQABAAEAAAAaAA0AAQABAAEAAAAaAA4AAQABAAEAAAAaAA8AAQABAAEAAAAaABAAAQABAAEAAAAaABEAAQABAAEAAAAaABIAAQABAAEAAAAaABMAAQABAAEAAAAaABQAAQABAAEAAAAaABUAAQABAAEAAAAaABYAAQABAAEAAAAaABcAAQABAAEAAAAaABgAAQABAAEAAAAaABkAAQABAAEAAAAAABoAAQABAAEAAAABABoAAQABAAEAAAACABoAAQABAAEAAAADABoAAQABAAEAAAAEABoAAQABAAEAAAAFABoAAQABAAEAAAAGABoAAQABAAEAAAAHABoAAQABAAEAAAAIABoAAQABAAEAAAAJABoAAQABAAEAAAAKABoAAQABAAEAAAALABoAAQABAAEAAAAMABoAAQABAAEAAAANABoAAQABAAEAAAAOABoAAQABAAEAAAAPABoAAQABAAEAAAAQABoAAQABAAEAAAARABoAAQABAAEAAAASABoAAQABAAEAAAATABoAAQABAAEAAAAUABoAAQABAAEAAAAVABoAAQABAAEAAAAWABoAAQABAAEAAAAXABoAAQABAAEAAAAYABoAAQAFAAUAAAAZABoAAQABAAEAAAAaABoAAQABAAEAAAARABkAAQABAAEAAAAAABsAAQABAAEAAAAAABwAAQABAAEAAAAAAB0AAQABAAEAAAAAAB4AAQABAAEAAAAAAB8AAQABAAEAAAAAACAAAQABAAEAAAAAACEAAQABAAEAAAAAACIAAQABAAEAAAAAACMAAQABAAEAAAABABsAAQABAAEAAAABABwAAQABAAEAAAABAB0AAQABAAEAAAABAB4AAQAFAAQAAAABAB8AAQABAAEAAAABACAAAQABAAEAAAABACEAAQABAAEAAAABACIAAQABAAEAAAABACMAAQABAAEAAAACABsAAQABAAEAAAACABwAAQABAAEAAAACAB0AAQABAAEAAAACAB4AAQABAAEAAAACAB8AAQABAAEAAAACACAAAQABAAEAAAACACEAAQABAAEAAAACACIAAQABAAEAAAACACMAAQABAAEAAAADABsAAQAFAAUAAAADABwAAQABAAEAAAADAB0AAQABAAEAAAADAB4AAQABAAEAAAADAB8AAQAEAAUAAAADACAAAQABAAEAAAADACEAAQABAAEAAAADACIAAQABAAEAAAADACMAAQABAAEAAAAEABsAAQABAAEAAAAEABwAAQABAAEAAAAEAB0AAQABAAEAAAAEAB4AAQABAAEAAAAEAB8AAQABAAEAAAAEACAAAQABAAEAAAAEACEAAQABAAEAAAAEACIAAQABAAEAAAAEACMAAQABAAEAAAAFABsAAQABAAEAAAAFABwAAQABAAEAAAAFAB0AAQABAAEAAAAFAB4AAQABAAEAAAAFAB8AAQABAAEAAAAFACAAAQABAAEAAAAFACEAAQAFAAUAAAAFACIAAQABAAEAAAAFACMAAQABAAEAAAAGABsAAQABAAEAAAAGABwAAQABAAEAAAAGAB0AAQABAAEAAAAGAB4AAQABAAEAAAAGAB8AAQABAAEAAAAGACAAAQABAAEAAAAGACEAAQABAAEAAAAGACIAAQABAAEAAAAGACMAAQABAAEAAAAHABsAAQABAAEAAAAHABwAAQABAAEAAAAHAB0AAQAGAAUAAAAHAB4AAQABAAEAAAAHAB8AAQABAAEAAAAHACAAAQABAAEAAAAHACEAAQABAAEAAAAHACIAAQABAAEAAAAHACMAAQABAAEAAAAIABsAAQABAAEAAAAIABwAAQABAAEAAAAIAB0AAQABAAEAAAAIAB4AAQABAAEAAAAIAB8AAQABAAEAAAAIACAAAQABAAEAAAAIACEAAQAEAAUAAAAIACIAAQABAAEAAAAIACMAAQABAAEAAAAJABsAAQABAAEAAAAJABwAAQABAAEAAAAJAB0AAQABAAEAAAAJAB4AAQABAAEAAAAJAB8AAQABAAEAAAAJACAAAQABAAEAAAAJACEAAQABAAEAAAAJACIAAQABAAEAAAAJACMAAQABAAEAAAAKABsAAQABAAEAAAAKABwAAQABAAEAAAAKAB0AAQABAAEAAAAKAB4AAQABAAEAAAAKAB8AAQABAAEAAAAKACAAAQABAAEAAAAKACEAAQABAAEAAAAKACIAAQABAAEAAAAKACMAAQABAAEAAAALABsAAQABAAEAAAALABwAAQABAAEAAAALAB0AAQABAAEAAAALAB4AAQABAAEAAAALAB8AAQABAAEAAAALACAAAQABAAEAAAALACEAAQABAAEAAAALACIAAQABAAEAAAALACMAAQABAAEAAAAMABsAAQABAAEAAAAMABwAAQABAAEAAAAMAB0AAQABAAEAAAAMAB4AAQABAAEAAAAMAB8AAQABAAEAAAAMACAAAQABAAEAAAAMACEAAQABAAEAAAAMACIAAQABAAEAAAAMACMAAQABAAEAAAANABsAAQABAAEAAAANABwAAQABAAEAAAANAB0AAQABAAEAAAANAB4AAQABAAEAAAANAB8AAQABAAEAAAANACAAAQABAAEAAAANACEAAQABAAEAAAANACIAAQABAAEAAAANACMAAQABAAEAAAAOABsAAQABAAEAAAAOABwAAQABAAEAAAAOAB0AAQABAAEAAAAOAB4AAQABAAEAAAAOAB8AAQABAAEAAAAOACAAAQABAAEAAAAOACEAAQABAAEAAAAOACIAAQABAAEAAAAOACMAAQABAAEAAAAPABsAAQABAAEAAAAPABwAAQABAAEAAAAPAB0AAQABAAEAAAAPAB4AAQABAAEAAAAPAB8AAQABAAEAAAAPACAAAQABAAEAAAAPACEAAQABAAEAAAAPACIAAQABAAEAAAAPACMAAQABAAEAAAAQABsAAQABAAEAAAAQABwAAQABAAEAAAAQAB0AAQABAAEAAAAQAB4AAQABAAEAAAAQAB8AAQABAAEAAAAQACAAAQABAAEAAAAQACEAAQABAAEAAAAQACIAAQABAAEAAAAQACMAAQABAAEAAAARABsAAQABAAEAAAARABwAAQABAAEAAAARAB0AAQABAAEAAAARAB4AAQABAAEAAAARAB8AAQABAAEAAAARACAAAQABAAEAAAARACEAAQABAAEAAAARACIAAQAFAAQAAAARACMAAQABAAEAAAASABsAAQABAAEAAAASABwAAQABAAEAAAASAB0AAQABAAEAAAASAB4AAQABAAEAAAASAB8AAQABAAEAAAASACAAAQABAAEAAAASACEAAQABAAEAAAASACIAAQABAAEAAAASACMAAQABAAEAAAATABsAAQABAAEAAAATABwAAQABAAEAAAATAB0AAQABAAEAAAATAB4AAQABAAEAAAATAB8AAQABAAEAAAATACAAAQABAAEAAAATACEAAQABAAEAAAATACIAAQABAAEAAAATACMAAQABAAEAAAAUABsAAQABAAEAAAAUABwAAQABAAEAAAAUAB0AAQABAAEAAAAUAB4AAQABAAEAAAAUAB8AAQABAAEAAAAUACAAAQAEAAUAAAAUACEAAQABAAEAAAAUACIAAQABAAEAAAAUACMAAQABAAEAAAAVABsAAQABAAEAAAAVABwAAQABAAEAAAAVAB0AAQABAAEAAAAVAB4AAQABAAEAAAAVAB8AAQABAAEAAAAVACAAAQABAAEAAAAVACEAAQABAAEAAAAVACIAAQABAAEAAAAVACMAAQABAAEAAAAWABsAAQABAAEAAAAWABwAAQABAAEAAAAWAB0AAQABAAEAAAAWAB4AAQABAAEAAAAWAB8AAQABAAEAAAAWACAAAQABAAEAAAAWACEAAQABAAEAAAAWACIAAQABAAEAAAAWACMAAQABAAEAAAAXABsAAQABAAEAAAAXABwAAQABAAEAAAAXAB0AAQABAAEAAAAXAB4AAQAEAAUAAAAXAB8AAQABAAEAAAAXACAAAQABAAEAAAAXACEAAQAGAAUAAAAXACIAAQABAAEAAAAXACMAAQABAAEAAAAYABsAAQABAAEAAAAYABwAAQABAAEAAAAYAB0AAQABAAEAAAAYAB4AAQABAAEAAAAYAB8AAQABAAEAAAAYACAAAQABAAEAAAAYACEAAQABAAEAAAAYACIAAQABAAEAAAAYACMAAQABAAEAAAAZABsAAQABAAEAAAAZABwAAQABAAEAAAAZAB0AAQABAAEAAAAZAB4AAQABAAEAAAAZAB8AAQABAAEAAAAZACAAAQABAAEAAAAZACEAAQABAAEAAAAZACIAAQABAAEAAAAZACMAAQABAAEAAAAaABsAAQABAAEAAAAaABwAAQABAAEAAAAaAB0AAQABAAEAAAAaAB4AAQABAAEAAAAaAB8AAQABAAEAAAAaACAAAQABAAEAAAAaACEAAQABAAEAAAAaACIAAQABAAEAAAAaACMAAQABAAEAAAACABcAAQABAAEAAAAAACQAAQABAAEAAAABACQAAQABAAEAAAACACQAAQABAAEAAAADACQAAQABAAEAAAAEACQAAQABAAEAAAAFACQAAQABAAEAAAAGACQAAQABAAEAAAAHACQAAQABAAEAAAAIACQAAQABAAEAAAAJACQAAQABAAEAAAAKACQAAQABAAEAAAALACQAAQABAAEAAAAMACQAAQABAAEAAAANACQAAQABAAEAAAAOACQAAQABAAEAAAAPACQAAQABAAEAAAAQACQAAQABAAEAAAARACQAAQABAAEAAAASACQAAQABAAEAAAATACQAAQABAAEAAAAUACQAAQABAAEAAAAVACQAAQABAAEAAAAWACQAAQABAAEAAAAXACQAAQABAAEAAAAYACQAAQABAAEAAAAZACQAAQABAAEAAAAaACQAAQABAAEAAAA=")
tile_set = ExtResource("1_r0x5m")
collision_enabled = false

[node name="foreground" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAAkAAQAJAAcAAAAVAAQAAQAIAAcAAAAJAAIAAQAFAAQAAAAOAAEAAQAFAAQAAAALACIAAQAFAAQAAAA=")
tile_set = ExtResource("1_r0x5m")
collision_enabled = false

[node name="TurnIndicators" type="Node" parent="." node_paths=PackedStringArray("team_label", "arrow", "turn_label")]
script = ExtResource("3_joorw")
team_label = NodePath("Control/TeamLabel")
arrow = NodePath("ArrowIndicator")
turn_label = NodePath("Control/TurnLabel")

[node name="ArrowIndicator" type="AnimatedSprite2D" parent="TurnIndicators"]
scale = Vector2(8, 8)
sprite_frames = ExtResource("4_2vekm")
animation = &"arrow_loop"
frame_progress = 0.829546

[node name="Control" type="Control" parent="TurnIndicators"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = -52.0
offset_right = 178.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamLabel" type="Label" parent="TurnIndicators/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -67.0
offset_right = 277.0
grow_vertical = 0
text = "<>"
label_settings = SubResource("LabelSettings_7jktm")

[node name="TurnLabel" type="Label" parent="TurnIndicators/Control"]
layout_mode = 1
offset_top = 32.0
offset_right = 93.0
offset_bottom = 169.0
theme = ExtResource("5_yhmtn")
text = "<>"

[node name="ReadyButton" type="Button" parent="." node_paths=PackedStringArray("timer", "fast_toggle")]
offset_left = 570.0
offset_top = 618.0
offset_right = 698.0
offset_bottom = 661.0
theme = ExtResource("5_yhmtn")
keep_pressed_outside = true
shortcut = SubResource("Shortcut_ryrav")
text = "READY"
script = ExtResource("5_yx171")
timer = NodePath("Timer")
fast_toggle = NodePath("FastToggle")

[node name="Timer" type="Timer" parent="ReadyButton"]
wait_time = 0.5
one_shot = true

[node name="FastToggle" type="CheckButton" parent="ReadyButton"]
layout_mode = 0
offset_top = 64.0
offset_right = 138.0
offset_bottom = 96.0
theme = ExtResource("5_yhmtn")
keep_pressed_outside = true
shortcut = SubResource("Shortcut_r0x5m")
text = "FAST MODE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ReadyButton"]
stream = ExtResource("10_lvtmh")
volume_db = -14.857

[node name="UnitSelector" type="Control" parent="." node_paths=PackedStringArray("_container")]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 428.0
offset_right = 314.0
offset_bottom = 788.0
grow_vertical = 2
script = ExtResource("6_yx171")
selectable_unit_types = Array[int]([0, 1])
_container = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="UnitSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UnitSelector"]
stream = ExtResource("10_lvtmh")
volume_db = -14.857

[node name="PlacementGrid" type="TileMapLayer" parent="." node_paths=PackedStringArray("_unit_selector", "_preview")]
position = Vector2(352, 800)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAABAAQAAQAEAAQAAAAAAAMAAQAEAAQAAAABAAIAAQAEAAQAACADAAQAAQAEAAQAABAEAAMAAQAEAAQAABABAAAAAQAEAAQAABAAAAEAAQAEAAQAAAACAAEAAQAEAAQAAAACAAMAAQAEAAQAAAADAAIAAQAEAAQAAAAEAAEAAQAEAAQAAAADAAAAAQAEAAQAAAA=")
tile_set = ExtResource("1_r0x5m")
script = ExtResource("12_gwjdr")
_unit_selector = NodePath("../UnitSelector")
_preview = NodePath("../Preview")

[node name="Preview" type="Sprite2D" parent="."]
scale = Vector2(4, 4)

[node name="US" parent="." instance=ExtResource("10_yhmtn")]
unique_name_in_owner = true
position = Vector2(416, 160)
cell = Vector2i(13, 30)
type = 2

[node name="Health" parent="US" index="1"]
_max_amount = 50.0
_amount = 50.0

[node name="THEM" parent="." instance=ExtResource("10_yhmtn")]
unique_name_in_owner = true
position = Vector2(416, 160)
cell = Vector2i(13, 5)
type = 2
team = 1

[node name="Health" parent="THEM" index="1"]
_max_amount = 50.0
_amount = 50.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("11_yhmtn")]

[editable path="US"]
[editable path="THEM"]
